@@ -220,9 +220,13 @@ public slots:
     void underline( bool b );
     void strikeOut( bool b );
     void deleteColumn();
-    void deleteRow();
     void insertColumn();
+    void deleteRow();
     void insertRow();
+    void hideRow();
+    void showRow();
+    void hideColumn();
+    void showColumn();
     void insertFormula();
     void insertMathExpr();
     void formulaSelection( const QString &_math );
@@ -440,9 +444,13 @@ private:
     KFontAction* m_selectFont;
     KFontSizeAction* m_selectFontSize;
     KAction* m_deleteColumn;
-    KAction* m_deleteRow;
+    KAction* m_hideColumn;
+    KAction* m_showColumn;
     KAction* m_insertColumn;
+    KAction* m_deleteRow;
     KAction* m_insertRow;
+    KAction* m_hideRow;
+    KAction* m_showRow;
     KAction* m_formulaPower;
     KAction* m_formulaSubscript;
     KAction* m_formulaParantheses;
