@@ -1103,3 +1103,6 @@ Now you can validate on integer
 Now you can validate on text length ( when value is a string)
 Add RANDBETWEEN function
 
+2000-12-05-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+-Now you can hide/show column/row
